Shape and layout fixes